Update fetch limit and fix text overflow in 'authors'

--- a/src/Sass/Header/_header.scss
+++ b/src/Sass/Header/_header.scss
@@ -94,6 +94,10 @@ $borders: .2rem;
             
           &_author{
             font-size: .5em;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            display: block;
+            margin: .3rem 0;
           }
         
           &_title{
